--- a/league/templates/league/createLeague.html
+++ b/league/templates/league/createLeague.html
@@ -22,20 +22,16 @@
         </div>
         <fieldset class="form-group">
             <div class="row">
-                <legend class="col-form-label col-sm-2 pt-0">League Visibility</legend>
-                <legend class="col-form-label col-sm-2 pt-0">Public leagues allow for anyone to join, whereas private leagues will require the League Administrator to accept requests.</legend>
-                <div class="col-sm-10">
+                <div class="col">
+                    <legend class="col-form-label pt-0">League Visibility</legend>
+                    <p>Public leagues allow for anyone to join, whereas private leagues will require the League Administrator to accept requests.</p>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="visibility" value="Public" checked>
-                        <label class="form-check-label">
-                    Public
-                  </label>
+                        <label class="form-check-label">Public</label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="visibility" value="Private">
-                        <label class="form-check-label">
-                    Private
-                  </label>
+                        <label class="form-check-label">Private</label>
                     </div>
                 </div>
             </div>
@@ -44,3 +40,8 @@
     </form>
     {% endblock %}
 </div>
+<script>
+    $(document).ready(function() {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
